--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,10 @@ nav{
     padding: 16px 20px;
 }
 
+.fa-bars{
+    padding-left: 24px;
+}
+
 .container{
     padding: 40px 0;
     width: 100%;
@@ -41,8 +45,8 @@ nav{
 }
 
 .t__icon{
-    max-width: 150px;
-    max-height: 150px;
+    max-width: 100px;
+    max-height: 100px;
 }
 
 .logo{
@@ -204,8 +208,8 @@ img{
 
 input{
     width: 100%;
-    border-radius: 4em;
-    padding: 28px;
+    border-radius: 64px;
+    padding: 24px;
     position: relative;
 }
 
@@ -222,8 +226,10 @@ p{
 
 .btn{
     position: absolute;
-    left: 250px;
+    margin-right: 8px;
+    margin-top: 8px;
 }
+
 
 button:hover{
     cursor: pointer;
@@ -387,12 +393,14 @@ button:hover{
 }
 
 
-.fas{
+.fas {
     border-radius: 16px;
     width: 24px;
     height: 24px;
+    display: flex !important;
     justify-content: center;
 }
+
 
 #plans{
     margin-bottom: 24px;
@@ -439,6 +447,30 @@ footer{
     display: flex;
     flex-wrap: wrap;
     padding: 24px 0;
+}
+
+/* .first__plan::after{
+    height: 12px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    background-color: rgb(11, 224, 243);
+    position: absolute;
+    width: 100%;
+    top: 0;
+}
+
+.first__plan::after{
+    height: 12px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    background-color: rgb(239, 11, 243);
+    position: absolute;
+    width: 100%;
+    top: 0;
+} */
+
+.plan__border{
+    position: relative;
 }
 
 .plan{
@@ -571,11 +603,11 @@ footer{
 }
 
 .question:hover{
-    transform: scale(1.1);
     font-weight: bold;
     transition: all 300ms ease;
     cursor: pointer;
     display: flex;
+    background-color: lightblue;
 }
 
 #FAQS{
@@ -654,108 +686,9 @@ footer{
 }
 
 
-@media (max-width: 480px) {
-    .button__container{
-        display: flex;
-        flex-direction: column;
-    }
-
-    section{
-        max-width: 450px;
-    }
-
-    figure, img{
-        max-width: 400px;
-    }
-
-    .btn{
-        bottom: 35%;
-    }
-
-    .input{
-        width: 300px;
-        margin: 0 auto;
-    }
-
-    #landing, #features, #quality__work, #process, #plans, #deals, #testimonials, #FAQS, #get__started{
-        margin: 0 auto;
-    }
-
-    .button__container{
-        align-items: center;
-    }
-
-    .reach{
-        margin: 12px 0;
-    }
-
-
-    .test__para{
-        text-align: center;
-        line-height: 1.6;
-    }
-
-    .thick, .values__para{
-        text-align: center;
-    }
-
-    h3{
-        font-size: 16px;
-        max-width: 380px;
-        margin: 0 auto;
-    }
-
-    .feature__row{
-        max-width: 400px;
-        margin: 0 auto;
-    }
-
-    .feature{
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 350px;
-    }
-
-    .feature__para{
-        text-align: center;
-        font-size: 16px;
-    }
-
-    .feature__description{
-        width: 300px;
-    }
-
-    .charlotte{
-        flex-direction: column;
-    }
-
-    .char__row{
-        align-items: center;
-        justify-content: center;
-    }
-
-    .char__img{
-        align-items: center;
-    }
-
-    .arrows{
-        margin-bottom: 32px;
-        align-items: center;
-    }
-
-    footer{
-        margin-top: 24px;
-    }
-
-    .deal__sub{
-        font-size: 16px;
-    }
-
-
-}
-
 @media (max-width: 760px) {
+    
+
     .nav__links{
         display: none;
     }
@@ -778,17 +711,42 @@ footer{
         width: 100%;
     }
 
-    h2, figure, input, p{
-        margin: 12px;
+    h2, figure, p{
+        margin: 24px;
+    }
+
+    section{
+        margin: 0 auto;
+    }
+
+    h3{
+        max-width: 600px;
+        margin: auto;
+    }
+
+    input{
+        margin: 0 auto;
+    }
+
+    .btn{
+        margin-right: 138px;
+    }
+
+    p{
+        max-width: 550px;
+        padding-left: 48px;
     }
 
     input{
         max-width: 450px;
+        display: flex;
+        justify-content: center;
     }
 
 
     .fourth__para{
         margin: 0 auto;
+        padding-top: 32px;
     }
 
     .fourth__img{
@@ -807,8 +765,9 @@ footer{
     .feature{
         padding: 32px 8px;
         width: 600px;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
+        margin: 0 auto;
     }
 
     .row__column{
@@ -931,4 +890,115 @@ footer{
         width: calc(100%/3);
         margin-top: 32px;
     }
+}
+
+@media (max-width: 480px) {
+    .button__container{
+        display: flex;
+        flex-direction: column;
+    }
+
+    #get__started{
+        margin: 0 24px;
+    }
+    section{
+        max-width: 450px;
+    }
+
+    figure, img{
+        max-width: 400px;
+    }
+
+    .btn{
+        bottom: 30%;
+        width: 300px;
+        margin: 0 auto;
+    }
+
+    .input{
+        width: 300px;
+        margin: 0 auto;
+    }
+
+    .fourth__para{
+        margin-top: 48px;
+    }
+
+    #landing, #features, #quality__work, #process, #plans, #deals, #testimonials, #FAQS{
+        margin: 0 auto;
+    }
+
+    .button__container{
+        align-items: center;
+    }
+
+    .reach{
+        margin: 12px 0;
+    }
+
+
+    .test__para{
+        text-align: center;
+        line-height: 1.6;
+    }
+
+    .thick, .values__para{
+        text-align: center;
+    }
+
+    h3{
+        font-size: 16px;
+        max-width: 380px;
+        margin: 0 auto;
+    }
+
+    .feature__row{
+        max-width: 400px;
+        margin: 0 auto;
+    }
+
+    .feature{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 350px;
+    }
+
+    .feature__para{
+        text-align: center;
+        font-size: 16px;
+        margin: 0;
+    }
+
+    .feature__description{
+        width: 300px;
+    }
+
+    .charlotte{
+        flex-direction: column;
+    }
+
+    .char__row{
+        align-items: center;
+        justify-content: center;
+    }
+
+    .char__img{
+        align-items: center;
+    }
+
+    .arrows{
+        margin-bottom: 32px;
+        align-items: center;
+    }
+
+    footer{
+        margin-top: 24px;
+    }
+
+    .deal__sub{
+        font-size: 16px;
+    }
+
+
 }
